[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py61850"
version = "0.0.1"
dependencies = [
]
requires-python = ">=3.8"
authors = [
  {name = "Etihwo", email = "etihwo@outlook.com"},
]
maintainers = [
  {name = "Etihwo", email = "etihwo@outlook.com"},
]
description = "Python wrapper around libiec61850"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENCE"]
keywords = ["iec61850"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = [
  "pre-commit",
]
test = [
  "pytest",
  "pytest-cov",
]
docs = [
  "sphinx",
  "pydata-sphinx-theme",
  "myst-nb",
  "sphinx_copybutton",
  "jupytext",
]

[project.urls]
Homepage = "https://github.com/etihwo/py61850"
Documentation = "https://etihwo.github.io/py61850/"
Repository = "https://github.com/etihwo/py61850.git"
"Bug Tracker" = ""
Changelog = ""

[tool.hatch.build.targets.wheel]
packages = ["py61850"]

[tool.black]
line-length = 99

[tool.isort]
profile = "black" # Ensures compatibility with Black formatter
line_length = 99
